--- a/package.json
+++ b/package.json
@@ -9,26 +9,26 @@
   },
   "devDependencies": {},
   "napa": {
-    "gravity-and-orbits": "phetsims/gravity-and-orbits",
-    "assert": "phetsims/assert",
-    "axon": "phetsims/axon",
-    "babel": "phetsims/babel",
-    "brand": "phetsims/brand",
-    "chipper": "phetsims/chipper",
-    "dot": "phetsims/dot",
-    "joist": "phetsims/joist",
-    "kite": "phetsims/kite",
-    "phet-core": "phetsims/phet-core",
-    "phetcommon": "phetsims/phetcommon",
-    "phetmarks": "phetsims/phetmarks",
-    "query-string-machine": "phetsims/query-string-machine",
-    "scenery": "phetsims/scenery",
-    "scenery-phet": "phetsims/scenery-phet",
-    "sherpa": "phetsims/sherpa",
-    "sun": "phetsims/sun",
-    "tambo": "phetsims/tambo",
-    "tandem": "phetsims/tandem",
-    "utterance-queue": "phetsims/utterance-queue"
+    "phet-gravity-and-orbits": "phetsims/gravity-and-orbits",
+    "phet-assert": "phetsims/assert#49aa67d01046326d85dcd8f265db91e8753038a1",
+    "phet-axon": "phetsims/axon",
+    "phet-babel": "phetsims/babel",
+    "phet-brand": "phetsims/brand",
+    "phet-chipper": "phetsims/chipper",
+    "phet-dot": "phetsims/dot",
+    "phet-joist": "phetsims/joist",
+    "phet-kite": "phetsims/kite",
+    "phet-phet-core": "phetsims/phet-core",
+    "phet-phetcommon": "phetsims/phetcommon",
+    "phet-phetmarks": "phetsims/phetmarks",
+    "phet-query-string-machine": "phetsims/query-string-machine",
+    "phet-scenery": "phetsims/scenery",
+    "phet-scenery-phet": "phetsims/scenery-phet",
+    "phet-sherpa": "phetsims/sherpa",
+    "phet-sun": "phetsims/sun",
+    "phet-tambo": "phetsims/tambo",
+    "phet-tandem": "phetsims/tandem",
+    "phet-utterance-queue": "phetsims/utterance-queue"
   },
   "scripts": {
     "install": "napa",
