--- a/src/install.yaml
+++ b/src/install.yaml
@@ -19,6 +19,9 @@ score:
   score_module: GravityAndOrbits
 meta_data:
   features:
+    - Mobile Friendly
+    - Simulation
+    - PhET
   supported_data:
   about: >
     Move the sun, earth, moon and space station to see how it affects their gravitational forces and orbital paths. Visualize the sizes and distances between different heavenly bodies, and turn off gravity to see what would happen without it!
